--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DS'
 - !lcsh 'China -- History -- Qing dynasty, 1644-1912 -- Anecdotes'
+- GITenberg
 title: 分甘余話
 url: http://www.gutenberg.org/ebooks/26746
